--- a/app/views/pages/class_b_endorsement.html.erb
+++ b/app/views/pages/class_b_endorsement.html.erb
@@ -36,6 +36,8 @@
 			<h4><i class="fa fa-check"></i> Section 3: Transporting Cargo Safely</h4>
 			<h4><i class="fa fa-check"></i> Section 4: Transporting Passengers Safely</h4>
 			<h4><i class="fa fa-check"></i> Section 5: Air Brakes</h4>
+			<h4><i class="fa fa-check"></i> Section 6: Combination Vehicles</h4>
+			<h4><i class="fa fa-check"></i> Section 10: School Buses</h4>
 			<h4><i class="fa fa-check"></i> Section 11: Pre-Trip Vehicle Inspection Test</h4>
 			<h4><i class="fa fa-check"></i> Section 12: Basic Vehicle Control</h4>
 			<h4><i class="fa fa-check"></i> Section 13: On-Road Driving</h4>
