--- a/app/views/pages/passenger_vehicle_endorsement.html.erb
+++ b/app/views/pages/passenger_vehicle_endorsement.html.erb
@@ -7,50 +7,147 @@
   <h1>Passenger Vehicle Endorsement Study Guide and Practice Tests</h1>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
-
-<div class="row pricing-row">
+<div class="row test-page-top">
   <div class="col-sm-12">
-		<div id="pricing-table" class="pricing-table">
-		  <ul>
-		    <li class="heading">Study Guide</li>
-		    <li><strong>Learn</strong> About the Test</li>
-		    <li><strong>Powerful</strong> Strategies</li>
-		    <li>Test Day Tips</li>
-		    <li>PDF, ePub, mobi formats</li>
-		    <li class="price"><span class="dollar">$</span>11</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=R3XCXMXKPPHWG", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+	  <p>The Passenger Vehicle Endorsement (P) is necessary for those that are transporting more than 15 passengers (this includes the driver). The <%= link_to "School Bus Endorsement (S)", :school_bus_endorsement %> includes passenger endorsement, but not all drivers transporting passengers need this type of endorsement (unless you plan on driving school buses or transporting students). If you plan on driving service vehicles (such as handicap vans or church vans), limousines, or airport shuttles, you'll need your P endorsement.</p>
 
-		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
-		    <li><strong>Complete</strong> Practice Test</li>
-		    <li><strong>All</strong> Study Guide Formats</li>
-		    <li><strong>Full</strong> Access</li>
-		    <li><strong>Master</strong> the Test</li>
-		    <li class="price"><span class="dollar">$</span>17</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FV739AHAWH5J", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <p>There is quite a bit of information you'll need to understand in order to pass your test get your P endorsement. We've tried to make this as simple as possible for you with our Passenger Vehicle study guide and Passenger Vehicle practice test (available separately or together in a complete package).</p>
 
-		  <ul>
-		    <li class="heading">Practice Test</li>
-		    <li><strong>200</strong> Questions</li>
-		    <li>Interactive</li>
-		    <li><strong>Automatic</strong> Scoring</li>
-		    <li><strong>Unlimited</strong> Attempts</li>
-		    <li class="price"><span class="dollar">$</span>9</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YWD3LDUHSGX3E", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <h3>What to Expect on the Passenger Vehicle Test</h3>
+
+    <ul>
+      <li>Correct braking procedures
+      <li>Proper emergency exit and push out window use
+      <li>Correct procedures at highway/rail grade drawbridges and crossings
+      <li>How to correctly load and unload passengers
+      <li>How to respond during emergency situations (unruly passengers or fires, for example)
+      <li>Other operating procedures and practices
+    </ul>
+
+    <p>The P endorsement exam can seem pretty daunting, but with proper preparation it's actually not too bad. We have the study guide and practice test portal that will help you know exactly what to expect when you take the test, and if you take just a little bit of time to check them out, you'll pass without a problem. </p>
+	</div>
+
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
+</div>
+
+</div><!-- close main container -->
+
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
+
+			<h4><i class="fa fa-check"></i> Section 2: Driving Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 4: Transporting Passengers Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 11: Pre-Trip Vehicle Inspection Test</h4>
+			<h4><i class="fa fa-check"></i> Section 12: Basic Vehicle Control Skills Test</h4>
+			<h4><i class="fa fa-check"></i> Section 13: On-road Driving</h4>
+
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/9uHTI2vsCwI?rel=0" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>Passenger Vehicle Endorsement Study Guide</h2>
+			<%= image_tag "cdl_study_guide-page.png", alt: "Passenger Vehicle endorsement study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Only the P-endorsement sections
+			  <li>Available for YOUR state
+			  <li>Any format you want (PDF, mobi, ePub)
+			  <li>Easy to understand
+			</ul>
+			<p>Have you ever tried to study for something but found the material was overly technical? That's exactly why we created our Passenger Vehicle endorsement study guide. We take the sections you need to know and give them to you in a straightforward, easy to understand way. Don't waste your time trying to figure out what something means - learn it from the pros so you can safely transport passengers.</p>
+
+			<p>Take our Passenger Vehicle exam study guide with you whever you go and study whenever is most convenient for you. The key is studying often, but making sure to take breaks so you don't overdue it. We'll help you kill it on test day.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>Passenger Vehicle Endorsement Practice Test</h2>
+			<%= image_tag "cdl-practice-test.png", alt: "Passenger Vehicle endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Best way to get ready for the test
+			  <li>Interactive and simple to use
+			  <li>Take a break at any time
+			  <li>Get scored automatically
+			</ul>
+
+      <p>The Passenger Vehicle endorsement practice test portal is the easiest way to take the test before you take the test. We use questions that are very similar to the ones you'll see when you're going for your P endorsement. Our practice test tells you if you pick the right or wrong answer and then gives you a score at the end. You can take the test as many times as you need to until you feel fully confident that you are ready to ace the exam on test day.</p>
+
+      <p>You will find that taking our Passenger vehicle practice test isn't even like studying - it's not boring and you get instant feedback. Take it whenever you have time and come back to it whenever you need to.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
 		</div>
 	</div>
 </div>
 
-<p>
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>Passenger Vehicle Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+	<div class="row pricing-row">
+	  <div class="col-sm-12">
+			<div id="pricing-table" class="pricing-table">
+			  <ul>
+			    <li class="heading">Study Guide</li>
+			    <li><strong>Learn</strong> About the Test</li>
+			    <li><strong>Powerful</strong> Strategies</li>
+			    <li>Test Day Tips</li>
+			    <li>PDF, ePub, mobi formats</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>11</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=R3XCXMXKPPHWG", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
 
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+			  <ul class="feature">
+			    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+			    <li><strong>Complete</strong> Practice Test</li>
+			    <li><strong>All</strong> Study Guide Formats</li>
+			    <li><strong>Full</strong> Access</li>
+			    <li><strong>Master</strong> the Test</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>17</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FV739AHAWH5J", class: "btn btn-primary btn-lg btn-danger" %></li>
+			  </ul>
 
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
-
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
+			  <ul>
+			    <li class="heading">Practice Test</li>
+			    <li><strong>200</strong> Questions</li>
+			    <li>Interactive</li>
+			    <li><strong>Automatic</strong> Scoring</li>
+			    <li><strong>Unlimited</strong> Attempts</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>9</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YWD3LDUHSGX3E", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
+			</div>
+		</div>
+	</div>
