--- a/app/views/pages/school_bus_endorsement.html.erb
+++ b/app/views/pages/school_bus_endorsement.html.erb
@@ -1,56 +1,150 @@
 <% content_for :head do %>
-  <title>School Bus Endorsement Study Guide & Practice Tests</title>
-  <meta name="description" content="School Bus Endorsement study guides and practice tests are available at CDLStudyGuideHQ.com - check them out here.">
+  <title>School Bus Endorsement Practice Test & Study Guide</title>
+  <meta name="description" content="The best School Bus Endorsement Practice Test & Study Guide are available at CDLStudyGuideHQ.com - check them out here.">
 <% end %>
 
 <div class="row text-center">
-  <h1>School Bus Endorsement Study Guide and Practice Tests</h1>
+  <h1>School Bus Endorsement Practice Test & Study Guide</h1>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
-
-<div class="row pricing-row">
+<div class="row test-page-top">
   <div class="col-sm-12">
-		<div id="pricing-table" class="pricing-table">
-		  <ul>
-		    <li class="heading">Study Guide</li>
-		    <li><strong>Learn</strong> About the Test</li>
-		    <li><strong>Powerful</strong> Strategies</li>
-		    <li>Test Day Tips</li>
-		    <li>PDF, ePub, mobi formats</li>
-		    <li class="price"><span class="dollar">$</span>11</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=H53ZES7HFP2KQ", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+	  <p>The School Bus Endorsement (S) is necessary for anyone that will operate school buses with passengers. If you are a mechanic that needs to occasionally drive the bus, you don't need the endorsement, but if you transport students to and/or from their homes or on school events (such as field trips), you do need the endorsement. Whether you are an employee of a public school or a private one, you'll need the S endorsement. In the past, all you needed was a permit to operate school buses, but that isn't the case any longer.</p>
 
-		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
-		    <li><strong>Complete</strong> Practice Test</li>
-		    <li><strong>All</strong> Study Guide Formats</li>
-		    <li><strong>Full</strong> Access</li>
-		    <li><strong>Master</strong> the Test</li>
-		    <li class="price"><span class="dollar">$</span>17</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5RLNSFW5KNVQU", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <p>The test isn't easy if you go into it without preparing, but our School bus endorsement practice test and study guide will help you coast through (and help you learn the material so you'll be an excellent bus driver).</p>
 
-		  <ul>
-		    <li class="heading">Practice Test</li>
-		    <li><strong>200</strong> Questions</li>
-		    <li>Interactive</li>
-		    <li><strong>Automatic</strong> Scoring</li>
-		    <li><strong>Unlimited</strong> Attempts</li>
-		    <li class="price"><span class="dollar">$</span>9</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X2K2N35W4WH6W", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <h3>What You Can Expect on the School Bus Endorsement Exam</h3>
+
+    <ul>
+      <li>How to safely load and unload children
+      <li>Proper operation of mirros, stop signals, flashing lights, and the other safety instruments
+      <li>Proper procedures at highway/rail grade drawbridges and crossings (Federal and state regulations)
+      <li>Emergency procedures and exits in order to safely evacuate passengers in emergencies
+    </ul>
+
+    <p>As you can see, there is a lot to know in order to pass your S endorsement exam. Fortunately, you're being smart about it (otherwise, you wouldn't be here). Take our School bus practice test and check out the study guide and you'll be more than ready to pass the first time.</p>
+	</div>
+
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
+</div>
+
+</div><!-- close main container -->
+
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
+
+			<h4><i class="fa fa-check"></i> Section 10: School Buses</h4>
+			<h4><i class="fa fa-check"></i> Section 11: Pre-Trip Vehicle Inspection Test</h4>
+			<h4><i class="fa fa-check"></i> Section 12: Basic Vehicle Control Skills Test</h4>
+			<h4><i class="fa fa-check"></i> Section 13: On-road Driving</h4>
+
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/CcNdUFdh-vo?rel=0" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>School Bus Endorsement Study Guide</h2>
+			<%= image_tag "cdl_study_guide-page.png", alt: "School Bus endorsement study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Covers the S-endorsement sections
+			  <li>Easy to read and understand
+			  <li>We have your state
+			  <li>Take it anywhere you go
+			</ul>
+			<p>Our School Bus endorsement study guide is the quickest way to learn and remember the material you need to know in order to ace the test and succeed as a school bus driver. Save precious time and frustration of trying to go through the whole handbook by getting pointers from the pros - we'll cut to the chase so you can focus on what matters. You'll find that studying for your S endorsement isn't that hard when you have the pros helping you.</p>
+
+			<p>The beauty of our School Bus endorsement study guide is that you can use it on your computer, your tablet, or your phone. Study a little bit here and there when you have time, and on test day feel confident with having prepared the smart way.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>School Bus Endorsement Practice Test</h2>
+			<%= image_tag "cdl-practice-test.png", alt: "School Bus endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>See how you'd score
+			  <li>Practice as many times as you want
+			  <li>Save progress & come back later
+			  <li>Know exactly what to expect
+			</ul>
+
+      <p>Why should you do a School bus endorsement practice test? It's one thing to read the information - it's another to be prepared to apply it when you're questioned about it. That's why we take questions that are very close to what you can expect on your S endorsement exam and let you test your knowledge. You'll quickly see which parts you need to work on and which you understand. That will help you better manage your time so you don't have to stress on exam day.</p>
+
+      <p>Our School Bus endorsement practice test is the best way to get yourself comfortable for exam day. Not only will you know the information, you'll be confortable in the exam environment and not have any surprises to deal with.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
 		</div>
 	</div>
 </div>
 
-<p>
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>School Bus Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+	<div class="row pricing-row">
+	  <div class="col-sm-12">
+			<div id="pricing-table" class="pricing-table">
+			  <ul>
+			    <li class="heading">Study Guide</li>
+			    <li><strong>Learn</strong> About the Test</li>
+			    <li><strong>Powerful</strong> Strategies</li>
+			    <li>Test Day Tips</li>
+			    <li>PDF, ePub, mobi formats</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>11</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=H53ZES7HFP2KQ", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
 
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+			  <ul class="feature">
+			    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+			    <li><strong>Complete</strong> Practice Test</li>
+			    <li><strong>All</strong> Study Guide Formats</li>
+			    <li><strong>Full</strong> Access</li>
+			    <li><strong>Master</strong> the Test</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>17</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5RLNSFW5KNVQU", class: "btn btn-primary btn-lg btn-danger" %></li>
+			  </ul>
 
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
-
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
+			  <ul>
+			    <li class="heading">Practice Test</li>
+			    <li><strong>200</strong> Questions</li>
+			    <li>Interactive</li>
+			    <li><strong>Automatic</strong> Scoring</li>
+			    <li><strong>Unlimited</strong> Attempts</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>9</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X2K2N35W4WH6W", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
+			</div>
+		</div>
+	</div>
