--- a/app/views/pages/tank_vehicle_endorsement.html.erb
+++ b/app/views/pages/tank_vehicle_endorsement.html.erb
@@ -1,56 +1,146 @@
 <% content_for :head do %>
-  <title>Tank Vehicle Endorsement Study Guide & Practice Tests</title>
-  <meta name="description" content="Tank Vehicle Endorsement study guides and practice tests are available at CDLStudyGuideHQ.com - check them out here.">
+  <title>Tank Vehicle Endorsement Practice Test & Study Guide</title>
+  <meta name="description" content="Get your Tank Vehicle Endorsement practice test & study guide at CDLStudyGuideHQ.com. We guarantee you'll pass.">
 <% end %>
 
 <div class="row text-center">
-  <h1>Tank Vehicle Endorsement Study Guide and Practice Tests</h1>
+  <h1>Tank Vehicle Endorsement Practice Test & Study Guide</h1>
+</div>
+<div class="row test-page-top">
+  <div class="col-sm-12">
+	  <p>If you're looking to haul tankers, you'll need your Tank Vehicle (N) endorsement. An N endorsement is required in order to drive commercial vehicles (Class A or Class B) and haul liquid or gas in:</p>
+
+	  <ul>
+	    <li>Permantently mounted cargo tanks rated at least 119 gallons
+	    <li>Portable tanks rated at least 1000 gallons 
+	  </ul>
+
+	  <p>With the N endorsement, you'll be able to drive vehicles transporting different gases and liquids. However, if you plan on transporting hazardous liquids or gases, you will need to get a <%= link_to "Hazardous materials endorsement", :hazardous_materials_endorsement %>. The tank vehicle sections of the CDL handbook include Section 9 (Hazardous materials) so you study all the material at once if you are going for both.</p>
+
+    <p>Our Tank vehicle practice test and study guide system is the best way to prepare for the exam so you can get your N endorsement on the first try, without having to spend hours slogging through the whole handbook. Get just the study guide or access to the practice test portal, or get the complete Tank Vehicle Endorsement study system for a single low price. It's so effective that we know you'll pass your exam or your money back.</p>
+	</div>
+
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
+</div><!-- close main container -->
 
-<div class="row pricing-row">
-  <div class="col-sm-12">
-		<div id="pricing-table" class="pricing-table">
-		  <ul>
-		    <li class="heading">Study Guide</li>
-		    <li><strong>Learn</strong> About the Test</li>
-		    <li><strong>Powerful</strong> Strategies</li>
-		    <li>Test Day Tips</li>
-		    <li>PDF, ePub, mobi formats</li>
-		    <li class="price"><span class="dollar">$</span>11</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GMH39BFJLCRNQ", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
 
-		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
-		    <li><strong>Complete</strong> Practice Test</li>
-		    <li><strong>All</strong> Study Guide Formats</li>
-		    <li><strong>Full</strong> Access</li>
-		    <li><strong>Master</strong> the Test</li>
-		    <li class="price"><span class="dollar">$</span>17</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EKKHDD3VUCRVE", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+      <h4><i class="fa fa-check"></i> Section 2: Driving Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 5: Air Brakes</h4>
+			<h4><i class="fa fa-check"></i> Section 6: Combination Vehicles</h4>
+			<h4><i class="fa fa-check"></i> Section 8: Tank Vehicles</h4>
+			<h4><i class="fa fa-check"></i> Section 9: Hazardous Materials</h4>
 
-		  <ul>
-		    <li class="heading">Practice Test</li>
-		    <li><strong>200</strong> Questions</li>
-		    <li>Interactive</li>
-		    <li><strong>Automatic</strong> Scoring</li>
-		    <li><strong>Unlimited</strong> Attempts</li>
-		    <li class="price"><span class="dollar">$</span>9</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=CE5M9BRV9BV3S", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/QnBEx9_jzwI?rel=0" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>Tank Vehicle Endorsement Study Guide</h2>
+			<%= image_tag "cdl_study_guide-page.png", alt: "Tank Vehicle endorsement study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Covers all N endorsement sections
+			  <li>Simple and clear information
+			  <li>All formats available (PDF, mobi, ePub)
+			  <li>Your state is covered
+			</ul>
+			<p>Our Tank Vehicle endorsement study guide was written to include only the information you need to focus on. You'll learn about driving safely, air brakes, combination vehicles, tank vehicles, and hazardous materials. You'll know what kind of questions to expect and learn tips about how to prepare for test day. If you want to get your Tank Vehicle (N) endorsement on the first try and with as little stress as possible, our guide is for you.</p>
+
+			<p>Get the Tank Vehicle Endorsement study guide now so you can learn the right material from the get go and not waste any time. We guarantee that you'll pass the exam if you use the study guide so give it a try.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>Tank Vehicle Endorsement Practice Test</h2>
+			<%= image_tag "cdl-practice-test.png", alt: "Tank Vehicle endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Take the test whenever you want
+			  <li>Save your place and take a break
+			  <li>Automatic score - see how you did
+			  <li>Be 100% prepared on test day
+			</ul>
+
+      <p>The Tank Vehicle Endorsement practice test portal is probably the best way to determine how much you know and whether or not you can ace the exam. We give you questions that are extremely close to the actual ones you'll receive on test day, and tell you immediately whether you're right or wrong. At the end of the exam, you'll get a score telling you how you did, so you know if you need to study more or if you're ready to go.</p>
+
+      <p>Our Tank Vehicle (N) endorsement practice test is designed the way it is, so when you take the exam it will feel like just another practice attempt. This will help you relax and recall what you remember and ace the exam the first time.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
 		</div>
 	</div>
 </div>
 
-<p>
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>Tank Vehicle Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+	<div class="row pricing-row">
+	  <div class="col-sm-12">
+			<div id="pricing-table" class="pricing-table">
+			  <ul>
+			    <li class="heading">Study Guide</li>
+			    <li><strong>Learn</strong> About the Test</li>
+			    <li><strong>Powerful</strong> Strategies</li>
+			    <li>Test Day Tips</li>
+			    <li>PDF, ePub, mobi formats</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>11</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GMH39BFJLCRNQ", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
 
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+			  <ul class="feature">
+			    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+			    <li><strong>Complete</strong> Practice Test</li>
+			    <li><strong>All</strong> Study Guide Formats</li>
+			    <li><strong>Full</strong> Access</li>
+			    <li><strong>Master</strong> the Test</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>17</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EKKHDD3VUCRVE", class: "btn btn-primary btn-lg btn-danger" %></li>
+			  </ul>
 
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
-
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
+			  <ul>
+			    <li class="heading">Practice Test</li>
+			    <li><strong>200</strong> Questions</li>
+			    <li>Interactive</li>
+			    <li><strong>Automatic</strong> Scoring</li>
+			    <li><strong>Unlimited</strong> Attempts</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>9</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=CE5M9BRV9BV3S", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
+			</div>
+		</div>
+	</div>
